  (post-dialog selection changes influence which pages are saved)
* Fixed progress text when importing files with multiple pages
* Some scanners activate paper-width and paper-height only for the ADF, and thus
  send "invalid argument" when setting the paper size for the flatbed. Trap this
  by also testing whether these options are active when setting the paper size.


1.3.5 (07.10.2015):

* Add prepend and append to PDF save options.
* Use new threading philosophy for scanning thread.
* Fix bug applying profiles with duplicated or invalid options
* Selecting single-sided pages also selects facing page. Closes bug #206
  (Selecting 1-sided/front after 2-sided/back has a logical problem)
* Fixed scan->unpaper->OCR chaining.
* Changed defaults so that unpaper does not run by default after scanning.
* Enabled hours, minutes and seconds in filename template.
  Closes patch #12 (Enable hours, minutes and seconds in default filename).
  Thanks to Jason Kankiewicz for the patch.
* Update to German translation (thanks to Tobias Bannert)
* Update to Slovak translation (thanks to Dusan Kazik)


1.3.4 (04.08.2015):

* Fix startup crash due to incorrect MessageDialog type and buttons


1.3.3 (01.08.2015):

* Suppress warnings when passed boolean as empty string
  Closes LP: #844582 ("Invalid argument" when trying to scan)
* Moved config file format to JSON. JSON::PP is a core module,
  so this does not create a new dependency.
* + option not to show dialog messages
* Trap errors from unpaper, rotate, crop, threshold, negate, unsharp
  processing tools
  Closes bug #198 (empty pages when saving, GIMP, or printing)
* Removed dependency on liblinux-distribution-perl as not available on FreeBSD
* Also support gconftool-2 when checking for email client
  Closes bug #200 (it doesn't attach on Fedora 21 (with thunderbird))
* Update to German translation (thanks to Tobias Bannert)
* Fixed program hang importing an empty file at the same time as other files